# jatekmotor

./: README.md
AjtoNyitas/: build.bat  generate.bat
MozgasEsInterakcio/: main.cpp
MozgoKocka/: main  main.cpp
ValodiKepek/: CMakeLists.txt  main.cpp
utkozesKezeles/: build.bat  main.cpp
